--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   },
   "homepage": "https://github.com/trainerbill/ps-js-training#readme",
   "dependencies": {
-    "braintree": "^2.0.2",
-    "express": "^4.15.2",
+    "braintree": "^2.13.1",
+    "express": "^4.16.4",
     "kraken-js": "^2.1.0",
     "paypal-classic-api": "^1.2.1",
     "paypal-rest-sdk": "^1.7.1",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/kraken-js": "^2.2.2",
     "babel-cli": "^6.23.0",
     "babel-preset-env": "^1.1.8"
   }
