--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:watch": "npm run clean && babel src -d dist --copy-files",
     "start": "npm run build && node dist/index.js",
     "start:dev": "supervisor -w src/ -- -r 'babel-register' src/index.js",
+    "preinstall": "npm install -g pm2 && pm2 install pm2-logrotate",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -23,7 +24,7 @@
   },
   "homepage": "https://github.com/trainerbill/ps-js-training#readme",
   "dependencies": {
-    "braintree": "^2.13.1",
+    "braintree": "^2.15.0",
     "express": "^4.16.4",
     "kraken-js": "^2.1.0",
     "paypal-classic-api": "^1.2.1",
@@ -31,8 +32,8 @@
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/kraken-js": "^2.2.2",
+    "@types/express": "^4.16.1",
+    "@types/kraken-js": "^2.2.3",
     "babel-cli": "^6.23.0",
     "babel-preset-env": "^1.1.8"
   }
